--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,10 @@ header {
 .top {
     width: 80%;
     margin: auto;
-    padding: 25px;
+    padding: 20px;
 }
 
-.clearfix {
+.clearfix::after {
     content: "";
     display: table;
     clear: both;
@@ -69,4 +69,58 @@ li a{
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     color: #424547;
+}
+
+/* hero section  */
+.hero-section {
+    background-image: url("../img/jumbo.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 415px;
+    margin-top: -7px;
+    position: relative;
+}
+
+.box-title {
+    text-align: center;
+    width: 50%;
+    color: white;
+}
+
+.box-title h1 {
+    font-size: 40px;
+    margin-bottom: 25px;
+}
+
+.box-title p {
+    text-align: unset;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.button1 {
+    border-radius: 20px;
+    padding: 13px;
+    border: none;
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    color: #424547;
+    background-color: white;
+    margin-right: 20px;
+}
+
+.button1 i{
+    margin: 0px 5px;
+}
+
+.button2 {
+    color: white;
+    background-color: #23272A;
 }
