--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,12 @@ header {
 /* typo  */
 
 h2 {
-    font-size: 35px;
+    font-size: 40px;
     margin-bottom: 30px;
 }
 
 p {
-    font-size: 15px;
+    font-size: 18px;
 }
 
 /* logo e menu di navigazione */
@@ -135,9 +135,13 @@ li a{
 
 /* main  */
 
+section {
+    margin: 20px 0px;
+}
+
 .item1 {
     float: left;
-    width: 65%;
+    width: 60%;
 }
 
 .item1 img {
@@ -146,7 +150,7 @@ li a{
 
 .testo1 {
     float: left;
-    width: 35%;
+    width: 40%;
     padding: 35px;
 }
 
