--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ h2 {
     margin-bottom: 30px;
 }
 
+h3 {
+    font-size: 30px;
+}
+
 p {
     font-size: 18px;
 }
@@ -169,4 +173,40 @@ section {
     color: white;
     margin: 30px;
 }
+
+/* footer  */
+footer {
+    height: 300px;
+    background-color: #23272A;
+}
+
+.div-footer {
+    float:left;
+    width: 30%;
+    color: #7289DA;
+    margin-top: 40px;
+}
+
+.div-footer h3 {
+    margin-bottom: 20px;
+}
+
+.div-footer img {
+    width: 8%;
+    vertical-align: middle;
+}
+
+.div-footer span {
+    vertical-align: middle;
+    color: white;
+}
+
+.social i {
+    margin-top: 20px;
+    padding-right: 20px;
+    color: white;
+    font-size: 20px;
+}
+
+
 
