--- a/css/style.css
+++ b/css/style.css
@@ -176,27 +176,51 @@ section {
 
 /* footer  */
 footer {
-    height: 300px;
     background-color: #23272A;
 }
 
-.div-footer {
+.div-footer{
+    margin-top: 40px;
+    color: white;
+}
+.lingua-social {
     float:left;
     width: 30%;
-    color: #7289DA;
-    margin-top: 40px;
+    color: #7289DA; 
 }
 
-.div-footer h3 {
+.prodotto, .compagnia, .risorse, .norme {
+    float: left;
+    width: 17.5%;
+}
+
+
+.div-footer li {
+    list-style: none;
+    padding: 5px;
+}
+
+.primo-li{
+    font-weight: 900;
+    color: #7289DA; 
+}
+
+.compagnia {}
+
+.risorse {}
+
+.norme {}
+
+.lingua-social h3 {
     margin-bottom: 20px;
 }
 
-.div-footer img {
+.lingua-social img {
     width: 8%;
     vertical-align: middle;
 }
 
-.div-footer span {
+.lingua-social span {
     vertical-align: middle;
     color: white;
 }
