--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header {
     width: 80%;
     margin: auto;
     padding: 20px;
+    position: relative;
 }
 
 .clearfix::after {
@@ -179,6 +180,8 @@ footer {
     background-color: #23272A;
 }
 
+/* prima parte del footer  */
+
 .div-footer{
     margin-top: 40px;
     color: white;
@@ -205,12 +208,6 @@ footer {
     color: #7289DA; 
 }
 
-.compagnia {}
-
-.risorse {}
-
-.norme {}
-
 .lingua-social h3 {
     margin-bottom: 20px;
 }
@@ -232,5 +229,13 @@ footer {
     font-size: 20px;
 }
 
+#linea {
+    border-bottom: 1px solid #7289DA;
+}
 
-
+/* seconda parte del footer  */
+footer button {
+    position: absolute;
+    top: -15px;
+    right: 0px;
+}
