--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ header {
     width: 80%;
     margin: auto;
     padding: 20px;
-    position: relative;
 }
 
 .clearfix::after {
@@ -28,7 +27,6 @@ header {
 }
 
 /* typo  */
-
 h2 {
     font-size: 40px;
     margin-bottom: 30px;
@@ -43,7 +41,6 @@ p {
 }
 
 /* logo e menu di navigazione */
-
 .logo, .accedi {
     float: left;
     width: 20%;
@@ -139,7 +136,6 @@ li a{
 }
 
 /* main  */
-
 section {
     margin: 20px 0px;
 }
@@ -181,7 +177,6 @@ footer {
 }
 
 /* prima parte del footer  */
-
 .div-footer{
     margin-top: 40px;
     color: white;
@@ -234,6 +229,10 @@ footer {
 }
 
 /* seconda parte del footer  */
+.div-padre{
+    position: relative;
+}
+
 footer button {
     position: absolute;
     top: -15px;
